[package]
name = "toy_compiler"
version = "0.1.0"
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
glob = "0.3.0"
thiserror = "1.0.30"
anyhow = "1.0.53"
generational-arena = "0.2"

[build-dependencies]
lalrpop = "0.19.6"
