[package]
name = "toy_compiler"
version = "0.1.0"
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.6"
anyhow = "1.0.53"
slotmap = "1.0.6"

[build-dependencies]
lalrpop = "0.19.6"
